# webhook-proxy

./: .gitignore  integrations.example.yml  pyproject.toml
src/: logger.py
src/backend/: app.py  integration_manager.py
src/backend/services/: integration_service.py
